outputs_20260401-083520-84c756d6/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\src\egtm_atom_3_phase_inverter_pwm.c:10:
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\include/egtm_atom_3_phase_inverter_pwm.h:10:31: error: unknown type name 'float32'; did you mean '_Float32'?
   10 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\src\egtm_atom_3_phase_inverter_pwm.c:15:10: fatal error: IfxPort_PinMap.h: No such file or directory
   15 | #include "IfxPort_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:1:
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G4_001_isr_toggles_led_once_per_call':
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:142:41: error: 'mock_togglePin_callCount' undeclared (first use in this function)
  142 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_togglePin_callCount, "ISR must toggle LED exactly once per call");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:142:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  142 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_togglePin_callCount, "ISR must toggle LED exactly once per call");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:142:41: note: each undeclared identifier is reported only once for each function it appears in
  142 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_togglePin_callCount, "ISR must toggle LED exactly once per call");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:142:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  142 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_togglePin_callCount, "ISR must toggle LED exactly once per call");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G4_002_isr_toggle_accumulates_over_multiple_calls':
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:153:41: error: 'mock_togglePin_callCount' undeclared (first use in this function)
  153 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(3, mock_togglePin_callCount, "ISR toggle count must accumulate across calls");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_3m3jz7r3\test\test_egtm_atom_3_phase_inverter_pwm.c:153:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  153 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(3, mock_togglePin_callCount, "ISR toggle count must accumulate across calls");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
